--- a/cdm_macroalgae.Rmd
+++ b/cdm_macroalgae.Rmd
@@ -6,8 +6,6 @@
 Recent surveys in the Coorong South Lagoon have highlighted the challenge to ecosystem health due to the high biomass and wide extent of filamentous algae, mainly the species Ulva. The survey data highlight that the filamentous algae are tightly associated with the locations that Ruppia are present, and late in the season the smothering and deoxygenation casued by large biomass accumulations are driving poor water quality. This section describes the approach to simulating macroalgae, and development of the model to the CSL situation.   
 
 
-Add changes text
-
 ## Model approach
 
 Within the Coorong, the AED model has previously been set up to predict inorganic and organic nutrients, and chlorophyll-a. Whilst nutrients are not directly required for the *Ruppia* model assessment, the presence of filamentous algal blooms can compete for light and these are linked to bioavailable nutrients within the water column (in addition to other attributes).
@@ -125,6 +123,76 @@ knitr::include_graphics("images/dev/3_picture11.png")
 ```
 
 ## Model setup
+
+Four pools were confgured to simulate the biomass of filamentous algae, $ulva_a$, $ulva_b$, $ulva_c$ and $ulva_s$. The parameters used in the setup are outlined in Table (Table \@ref(tab:6-malgpars)).
+
+```{r 6-malgpars, echo=FALSE, message=FALSE, warning=FALSE}
+library(knitr)
+library(kableExtra)
+library(readxl)
+library(rmarkdown)
+theSheet <- read_excel('tables/macroalgae_parameters.xlsx', sheet = 1)
+theSheet <- theSheet[theSheet$Table == "Parameter",]
+theSheetGroups <- unique(theSheet$Group)
+
+for(i in seq_along(theSheet$Parameter)){
+  if(!is.na(theSheet$Parameter[i])==TRUE){
+    theSheet$Parameter[i] <- paste0("$$",theSheet$Parameter[i],"$$")
+  } else {
+    theSheet$Parameter[i] <- NA
+  }
+}
+for(i in seq_along(theSheet$Unit)){
+  if(!is.na(theSheet$Unit[i])==TRUE){
+    theSheet$Unit[i] <- paste0("$$\\small{",theSheet$Unit[i],"}$$")
+  } else {
+    theSheet$Unit[i] <- NA
+  }
+}
+
+kbl(theSheet[,3:NCOL(theSheet)], caption = "Macralgae (Ulva) parameter summary", align = "l",) %>%
+  pack_rows(theSheetGroups[1],
+            min(which(theSheet$Group == theSheetGroups[1])),
+            max(which(theSheet$Group == theSheetGroups[1])),
+            background = '#ebebeb') %>%
+  pack_rows(theSheetGroups[2],
+            min(which(theSheet$Group == theSheetGroups[2])),
+            max(which(theSheet$Group == theSheetGroups[2])),
+            background = '#ebebeb') %>%
+  pack_rows(theSheetGroups[3],
+					  min(which(theSheet$Group == theSheetGroups[3])),
+					  max(which(theSheet$Group == theSheetGroups[3])),
+					  background = '#ebebeb') %>%
+  pack_rows(theSheetGroups[4],
+          	min(which(theSheet$Group == theSheetGroups[4])),
+          	max(which(theSheet$Group == theSheetGroups[4])),
+          	background = '#ebebeb') %>%
+  pack_rows(theSheetGroups[5],
+            min(which(theSheet$Group == theSheetGroups[5])),
+            max(which(theSheet$Group == theSheetGroups[5])),
+            background = '#ebebeb') %>%
+  pack_rows(theSheetGroups[6],
+            min(which(theSheet$Group == theSheetGroups[6])),
+            max(which(theSheet$Group == theSheetGroups[6])),
+            background = '#ebebeb') %>%
+  pack_rows(theSheetGroups[7],
+            min(which(theSheet$Group == theSheetGroups[7])),
+            max(which(theSheet$Group == theSheetGroups[7])),
+            background = '#ebebeb') %>%
+
+row_spec(0, background = "#14759e", bold = TRUE, color = "white") %>%
+  kable_styling(full_width = F,font_size = 10) %>%
+  column_spec(2, width_min = "10em") %>%
+  column_spec(3, width_max = "19em") %>%
+  column_spec(4, width_min = "5em") %>%
+  column_spec(5, width_min = "5em") %>%
+  column_spec(6, width_min = "5em") %>%
+  column_spec(7, width_min = "5em") %>%
+    scroll_box(width = "700px", height = "4600px",
+             fixed_thead = FALSE)
+```
+
+
 
 
 ## Validation and assessment
